# shocktube1dcalc

./: .bandit  .gitignore  LICENSE  mkdocs.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: branches-push-pr.yaml  pypi-publish.yaml
contrib/: show-cese-analytic.py  show-cese-animation.py  show-shocktube1dcalc-shocktubecalc-animation.py
docs/: README.md  contributing.md
notes/: .gitignore  Makefile  pstake.py  shocktube.tex
notes/eps/: tube_at_rest.eps  tube_move_right.eps  tube_zones.eps
notes/schematic/: tube_at_rest.tex  tube_move_right.tex  tube_zones.tex
shocktube1dcalc/: cese.py  generator_mesh.py  helper.py  helper_plot.py  solver_analytic.py
tasks/: common.py  test.py
tests/: test_shocktube1dcalc.py
